Emit signals correctly when items are removed from the root.

BUG: 223779

svn path=/trunk/KDE/kdepimlibs/; revision=1083603